tests/pos/i20484.scala
given Int = ???
given Char = ???
val a = summon[Int]