tests/neg/package-export/defaults.scala
package defaults

given numerics.Ring[Int] = ???
